# lsimons-template-py

./: .mise.toml  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
src/template/: __init__.py
tests/: test_placeholder.py
